--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
     <artifactId>gravitee-resource-storage-api</artifactId>
     <version>1.0.0</version>
 
-    <name>Gravitee.io APIM - Resource - Content Provider API</name>
+    <name>Gravitee.io APIM - Resource - Storage API</name>
 
     <properties>
-        <gravitee-bom.version>8.2.22</gravitee-bom.version>
+        <gravitee-apim.version>4.8.0-SNAPSHOT</gravitee-apim.version>
         <gravitee-resource-api.version>1.1.0</gravitee-resource-api.version>
     </properties>
 
@@ -42,9 +42,9 @@
         <dependencies>
             <!-- Import bom to properly inherit all dependencies -->
             <dependency>
-                <groupId>io.gravitee</groupId>
-                <artifactId>gravitee-bom</artifactId>
-                <version>${gravitee-bom.version}</version>
+                <groupId>io.gravitee.apim</groupId>
+                <artifactId>gravitee-apim-bom</artifactId>
+                <version>${gravitee-apim.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -59,17 +59,12 @@
             <version>${gravitee-resource-api.version}</version>
             <scope>provided</scope>
         </dependency>
-
-        <!-- Other -->
         <dependency>
-            <groupId>io.reactivex.rxjava3</groupId>
-            <artifactId>rxjava</artifactId>
+            <groupId>io.gravitee.gateway</groupId>
+            <artifactId>gravitee-gateway-api</artifactId>
             <scope>provided</scope>
         </dependency>
-    </dependencies>
 
-    <build>
-        <plugins>
-        </plugins>
-    </build>
+        <!-- Other -->
+    </dependencies>
 </project>
